--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@
                 </div>
 
                 <div class="btn-box">
-                    <a href="tel:+919949305180" class="ro-water-purifiers-btn"
-                    target="_blank">Call Now</a>
+                    <a href="https://wa.me/9949305180?text= I need more information on ro water purifiers and sales" class="ro-water-purifiers-btn"
+                    target="_blank">WhatsApp Us</a>
                 </div>
 
             </div>
@@ -494,8 +494,8 @@
                 </div>
 
                 <div class="btn-box">
-                    <a href="tel:+919949305180" class="ro-water-purifiers-btn"
-                    target="_blank">Call Now</a>
+                    <a href="https://wa.me/9949305180?text= I need more information on ro water purifiers and sales" class="ro-water-purifiers-btn"
+                    target="_blank">WhatsApp Us</a>
                 </div>
 
             </div>
@@ -519,8 +519,8 @@
                 </div>
 
                 <div class="btn-box">
-                    <a href="tel:+919949305180" class="ro-water-purifiers-btn"
-                    target="_blank">Call Now</a>
+                    <a href="https://wa.me/9949305180?text= I need more information on ro water purifiers and sales" class="ro-water-purifiers-btn"
+                    target="_blank">WhatsApp Us</a>
                 </div>
 
 
@@ -544,8 +544,8 @@
                 </div>
 
                 <div class="btn-box">
-                    <a href="tel:+919949305180" class="ro-water-purifiers-btn"
-                    target="_blank">Call Now</a>
+                    <a href="https://wa.me/9949305180?text= I need more information on ro water purifiers and sales" class="ro-water-purifiers-btn"
+                    target="_blank">WhatsApp Us</a>
                 </div>
 
             </div>
@@ -567,8 +567,8 @@
                 </div>
 
                 <div class="btn-box">
-                    <a href="tel:+919949305180" class="ro-water-purifiers-btn"
-                    target="_blank">Call Now</a>
+                    <a href="https://wa.me/9949305180?text= I need more information on ro water purifiers and sales" class="ro-water-purifiers-btn"
+                    target="_blank">WhatsApp Us</a>
                 </div>
 
             </div>
@@ -590,8 +590,8 @@
                 </div>
 
                 <div class="btn-box">
-                    <a href="tel:+919949305180" class="ro-water-purifiers-btn"
-                    target="_blank">Call Now</a>
+                    <a href="https://wa.me/9949305180?text= I need more information on ro water purifiers and sales" class="ro-water-purifiers-btn"
+                    target="_blank">WhatsApp Us</a>
                 </div>
 
             </div>
