--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 
                 <div class="btn-box">
                     <a href="https://wa.me/9949305180?text= I need more information on ro water purifiers and sales" class="ro-water-purifiers-btn"
-                    target="_blank">WhatsApp Us</a>
+                    target="_blank">WhatsApp s</a>
                 </div>
 
             </div>
