--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <meta property="og:site_name" content="Srikanth Water Solution">
 
-    <meta property="og:url" content="https://kodamsrikanth.github.io/srikanthwatersolution/">
+    <meta property="og:url" content="https://www.srikanthwatersolution.in/">
 
     <meta property="og:type" content="website/product">
 
@@ -28,11 +28,11 @@
     <meta property="og:description" content="Srikanth Water Solution offers Aquafresh dolphin water purifier sales and services in Godavarikhani (505209), Godavarikhani (505208), Peddapalli (505172), 
     Colony (405206), and Manchirial (504208). Ensure pure, safe, and healthy water with our high-quality water purifiers.">
 
-    <meta property="og:image" content="https://kodamsrikanth.github.io/srikanthwatersolution/srikanth-water-solution-logo.jpg">
+    <meta property="og:image" content="https://www.srikanthwatersolution.in/srikanth-water-solution-logo.jpg">
 
     <link rel="icon" type="image/png" href="srikanth-water-solution-fevicon-logo.jpg" />
 
-    <link rel="canonical" href="https://kodamsrikanth.github.io/srikanthwatersolution/" />
+    <link rel="canonical" href="https://www.srikanthwatersolution.in/" />
 
     <title>RO Water Purifiers Service and Sales - Srikanth Water Solution</title>
 
@@ -1054,3 +1054,4 @@
 </body>
 
 </html>
+
