--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about-us.html" target="_blank">About Us</a></li>
-                        <li><a href="services.html" target="_blank">Services</a></li>
+                        <li><a href="services.html" target="_blank">Service</a></li>
                         <li><a href="contact-us.html" target="_blank">Contact Us</a></li>
                     </ul>
                 </div>
@@ -1054,4 +1054,5 @@
 </body>
 
 </html>
+
 
