--- a/ro-water-purifier-service-in-godavarikhani.html
+++ b/ro-water-purifier-service-in-godavarikhani.html
@@ -2,47 +2,120 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Author -->
     <meta name="author" content="Kodam Srikanth">
 
-    <meta name="keywords" content="RO Water Purifiers Service and Sales, RO Water Purifiers Service and Sales in Godavarikhani, Srikanth Water Solution, water purifier sales in Godavarikhani (505209), Godavarikhani (505208), Peddapalli (505172), 
-    Colony (405206), and Manchirial (504208) water purifier services, RO water purifiers, Alkaline water purifiers, Copper water purifiers, water purification solutions, purosis ro water purifier, 
-    purosis ro water purifier in godavarikhani, water purifier installation, godavarikhani ro water purifiers" />
+    <!-- Primary Keywords -->
+    <meta name="keywords"
+        content="RO Water Purifier Service Godavarikhani, RO Repair Godavarikhani, RO Technician Godavarikhani, RO Service Near Me Godavarikhani, Water Purifier Service Godavarikhani, RO Installation Godavarikhani, RO Sales Godavarikhani, Srikanth Water Solution Godavarikhani, Best RO Service in Godavarikhani" />
 
+    <!-- Primary Description -->
     <meta name="description"
-        content="Srikanth Water Solution offers RO Water Purifiers Service and Sales in Godavarikhani (505209), Godavarikhani (505208), Peddapalli (505172), 
-    Colony (405206), and Manchirial (504208). Ensure pure, safe, and healthy water with our high-quality water purifiers." />
+        content="Best RO Water Purifier Service in Godavarikhani. We provide RO installation, repair, filter change, maintenance & new RO sales. Same-day RO service available in Godavarikhani and nearby areas." />
 
-    <meta property="og:site_name" content="Srikanth Water Solution">
+    <!-- Canonical -->
+    <link rel="canonical" href="https://www.srikanthwatersolution.com/ro-water-purifier-service-in-godavarikhani">
 
-    <meta property="og:url" content="https://www.srikanthwatersolution.com/">
-
-    <meta property="og:type" content="website/product">
-
-    <meta property="og:title" content="RO Water Purifiers Service and Sales by Srikanth Water Solution">
-
-    <meta property="og:description" content="Srikanth Water Solution offers Aquafresh dolphin water purifier sales and services in Godavarikhani (505209), Godavarikhani (505208), Peddapalli (505172), 
-    Colony (405206), and Manchirial (504208). Ensure pure, safe, and healthy water with our high-quality water purifiers.">
-
+    <!-- Open Graph (Facebook & WhatsApp Preview) -->
+    <meta property="og:site_name" content="Srikanth Water Solution - Godavarikhani">
+    <meta property="og:url" content="https://www.srikanthwatersolution.com/ro-water-purifier-service-in-godavarikhani">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="RO Water Purifier Service in Godavarikhani | Installation & Repair">
+    <meta property="og:description"
+        content="Professional RO Water Purifier Installation, Repair & Sales in Godavarikhani. Same-day service for all RO brands.">
     <meta property="og:image" content="https://www.srikanthwatersolution.com/srikanth-water-solution-logo.jpg">
 
-    <link rel="icon" type="image/png" href="srikanth-water-solution-favicon-logo.jpg" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="RO Water Purifier Service in Godavarikhani - Srikanth Water Solution">
+    <meta name="twitter:description"
+        content="RO installation, repair & purifier sales in Godavarikhani. Trusted technician with fast service.">
+    <meta name="twitter:image" content="https://www.srikanthwatersolution.com/srikanth-water-solution-logo.jpg">
 
-    <link rel="canonical" href="https://www.srikanthwatersolution.com/" />
+    <!-- GEO Tags (Local SEO Boost) -->
+    <meta name="geo.region" content="IN-TG">
+    <meta name="geo.placename" content="Godavarikhani">
+    <meta name="geo.position" content="18.7867;79.4521">
+    <meta name="ICBM" content="18.7867, 79.4521">
 
-    <title>RO Water Purifiers Service and Sales - Srikanth Water Solution</title>
+    <!-- Preload Important Files -->
+    <link rel="preload" href="css/stylesws.css" as="style">
+    <link rel="preload" href="css/swiper-bundle.min.css" as="style">
 
-    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
-    <!-- font awesome cdn link -->
+    <!-- Fav Icon -->
+    <link rel="icon" type="image/png" href="srikanth-water-solution-fevicon-logo.jpg" />
+
+    <!-- Title -->
+    <title>RO Water Purifier Service in Godavarikhani | Srikanth Water Solution</title>
+
+    <!-- CSS Files -->
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <!-- custom css file link -->
-    <link rel="stylesheet" href="css/stylesws.css" type="text/css" />
+    <link rel="stylesheet" href="css/stylesws.css" type="text/css">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "@id": "https://www.srikanthwatersolution.com/ro-water-purifier-service-in-godavarikhani#localbusiness",
+  "name": "Srikanth Water Solution - Godavarikhani",
+  "image": "https://www.srikanthwatersolution.com/srikanth-water-solution-logo.jpg",
+  "url": "https://www.srikanthwatersolution.com/ro-water-purifier-service-in-godavarikhani",
+  "telephone": "+91 9949305180",
+  "priceRange": "₹₹",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Godavarikhani",
+    "addressLocality": "Ramagundam",
+    "addressRegion": "Telangana",
+    "postalCode": "505209",
+    "addressCountry": "IN"
+  },
+  "description": "RO Water Purifier Installation, Repair, Service & Sales in Godavarikhani. Same-day RO technician service available for all brands.",
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": "18.7867",
+    "longitude": "79.4521"
+  },
+  "areaServed": [
+    "Godavarikhani",
+    "Ramagundam",
+    "Peddapalli",
+    "Mancherial",
+    "Manthani",
+    "Chennur",
+    "NTPC Ramagundam"
+  ],
+  "openingHoursSpecification": [
+    {
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday",
+        "Saturday",
+        "Sunday"
+      ],
+      "opens": "07:00",
+      "closes": "22:00"
+    }
+  ],
+  "sameAs": [
+    "https://www.facebook.com/srikanthwatersolution/",
+    "https://www.instagram.com/srikanth_water_solution/",
+    "https://youtube.com/@srikanthwatersolution/"
+  ]
+}
+</script>
 
 </head>
+
 
 
 <body>
@@ -351,7 +424,7 @@
     <section class="water-purifier-section">
 
         <div class="contact-information">
-            <h3 class="water-purifier-name">RO Water Purifiers Service and Sales </h3>
+            <h3 class="water-purifier-name">RO Water Purifiers Service and Sales in godavarikhani </h3>
             <div class="social-media-buttons">
                 <a href="tel:+919949305180" class="fas fa-phone">
                     <p>Call</p>
