--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/stylesws.css" type="text/css">
+    <meta name="msvalidate.01" content="487C3A65FBF42C26935FAB20D8FA0A01" />
 
 <script type="application/ld+json">
 {
@@ -1077,3 +1078,4 @@
 </body>
 
 </html>
+
