--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/stylesws.css">
 
+    <meta name="google-site-verification" content="gP-1ZKP4AWVoQyzGBPHDChfUrQAw8WNC2gRvL-OMQn4" />
+
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -1758,3 +1760,4 @@
 </body>
 
 </html>
+
